components/Modal.css
.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10000;
}

.modal-content {
  background: #F9FAFB;
  padding: 16px;
  border-radius: 8px;
  box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 4px 6px -4px rgba(0, 0, 0, 0.1);
  max-width: 450px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.chat-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  max-height: 60vh;
  overflow-y: auto;
  margin-bottom: 6px;
}

.chat-message {
  max-width: 80%;
  margin-bottom: 10px;
  padding: 10px 15px;
  border-radius: 10px;
  font-size: 14px;
  line-height: 1.4;
}

.user-message {
  align-self: flex-end;
  background: #DFE1E7;
  color: #666D80;
}

.bot-message {
  align-self: flex-start;
  background: #DBEAFE;
  color: #666D80;
}

.input-container {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.modal-input {
  flex-grow: 1;
  border: none;
  padding: 10px;
  font-size: 16px;
  color: #9ca3af;
  outline: none;
  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.100) inset;
  margin-bottom: 10px;
  width: 100%;
}

.modal-input::placeholder {
  color: #9ca3af;
}

.button-group {
  display: flex;
  justify-content: space-between;
  width: fit-content;
  align-self: flex-end;
}

.modal-button {
  background: #3B82F6;
  color: white;
  width: fit-content;
  border: none;
  padding: 8px 10px;
  border-radius: 6px;
  font-size: 12px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: flex-end;
  text-align: center;
  min-width: 80px;
}

.modal-button svg {
  margin-right: 8px;
}

.modal-button:hover {
  background-color: #2563eb;
}

.modal-button:disabled {
  background-color: #b2d4ff;
  cursor: not-allowed;
}

.generate-button {
  width: 100%;
  position: relative;
  left: 154px;
}

.insert-button, .regenerate-button {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 5px;
}

.insert-button {
  background-color: #ffffff;
  color: #666D80;
  border: 1px solid #666D80;
}

.insert-button:hover {
  background-color: #F3F4F6;
}

.regenerate-button {
  background-color: #3B82F6;
  color: #F3F4F6;
}

.regenerate-button:hover {
  background-color: #E5E7EB;
}

.modal-response {
  background-color: #f3f6f8;
  border-radius: 8px;
  padding: 15px;
  margin-top: 20px;
  width: 100%;
  text-align: left;
}

.modal-response h3 {
  font-size: 16px;
  font-weight: bold;
  margin-bottom: 10px;
  color: #333;
}

.modal-response p {
  font-size: 14px;
  line-height: 1.5;
  color: #4a4a4a;
  white-space: pre-wrap;
  word-wrap: break-word;
}

